--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -3,11 +3,58 @@
 }
 body {
     font-family: sans-serif;
+    margin: 0;
 }
+
+
+
+
+h1{
+    text-align: center;
+}
+h2 {
+    display: inline-block;
+    border: 3px solid #6f6f6f;
+    padding: 5px;
+    width: 150px;
+    text-align: center;
+    margin-top: -13px;
+    margin-bottom: 0;
+    position: absolute;
+    right: -3px;
+    top: 10px;
+}
+.chicken {
+    background-color: #ff8c38;
+}
+.beef {
+    background-color: #913232;
+    color: #fff;
+}
+.sushi {
+    background-color: #369818;
+}
+.row > div {
+    background-color: #c7c7c7;
+    border: 3px solid #6f6f6f;
+    position: relative;
+    height: 200px;
+    margin-right: auto;
+    margin-left: auto;
+    margin: 10px;
+    padding: 10px;
+    padding-top: 35px;
+}
+
+
+
+
 
 /************* Responsive framework *************/
 .row {
     width: 100%;
+    margin: 0;
+    padding: 15px;
 }
 /************* Desktop Only *************/
 @media (min-width: 992px) {
@@ -93,73 +140,4 @@ body {
     .col-md-12 {
         width: 100%;
     }
-}
-
-/************* Mobiles Only *************/
-/**
-@media (max-width: 767px) {
-    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12{
-        float: left;
-    }
-    .col-sm-1 {
-        width: 8.33%;
-    }
-    .col-sm-2 {
-        width: 16.66%;
-    }
-    .col-sm-3 {
-        width: 25%;
-    }
-    .col-sm-4 {
-        width: 33%;
-    }
-    .col-sm-5 {
-        width: 41.66%;
-    }
-    .col-sm-6 {
-        width: 50%;
-    }
-    .col-sm-7 {
-        width: 58.33%;
-    }
-    .col-sm-8 {
-        width: 66.66%;
-    }
-    .col-sm-9 {
-        width: 74.99%;
-    }
-    .col-sm-10 {
-        width: 83.33%;
-    }
-    .col-sm-11 {
-        width: 91.66%;
-    }
-    .col-sm-12 {
-        width: 100%;
-    }
-} **/
-
-
-h1{
-    text-align: center;
-}
-h2 {
-    display: inline-block;
-    border: 3px solid #6f6f6f;
-    padding: 5px 20px;
-    margin-top: -13px;
-    margin-bottom: 0;
-    position: relative;
-    left: 300px;
-}
-.row > div {
-    background-color: #c7c7c7;
-    border: 3px solid #6f6f6f;
-    position: relative;
-    height: 200px;
-    margin-right: 5px;
-    padding: 10px;
-}
-.row > div:last-child {
-    margin-right: 0;
 }
