--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -36,7 +36,7 @@ h2 {
     background-color: #369818;
 }
 
-.row div {
+.section {
     background-color: #c7c7c7;
     border: 3px solid black;
     position: relative;
