--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -15,6 +15,8 @@ h1{
     font-size: 175%;
     margin: 0;
     margin-top: 15px;
+    text-shadow: 2px 2px 10px #bbb;
+    color: #191922;
 }
 h2 {
     display: inline-block;
@@ -33,23 +35,39 @@ h2 {
 .chicken {
     background-color: #ff8c38;
 }
+.chicken:hover {
+    background-color: #fff;
+    color: #ff8c38;
+    cursor: pointer;
+}
 .beef {
     background-color: #913232;
+}
+.beef:hover {
+    background-color: #fff;
+    color: #913232;
+    cursor: pointer;
 
 }
 .sushi {
     background-color: #369818;
 }
+.sushi:hover {
+    background-color: #fff;
+    color: #369818;
+    cursor: pointer;
+}
+
 
 .section {
-    background-color: #c7c7c7;
+    background-color: #ebebeb;
     border: 3px solid black;
     position: relative;
     height: 200px;
     margin-right: 15px;
     margin-left: auto;
     margin-bottom: 15px;
-    padding: 10px;
+    padding: 20px;
     padding-top: 35px;
     box-sizing: border-box;
     min-width: 300px;
