--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -14,13 +14,14 @@ h1{
     text-align: center;
     font-size: 175%;
     margin: 0;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-bottom: 20px;
     text-shadow: 2px 2px 10px #bbb;
     color: #191922;
 }
 h2 {
     display: inline-block;
-    border: 3px solid black;
+    border: 1px solid black;
     padding: 5px;
     font-size: 125%;
     width: 150px;
@@ -28,8 +29,8 @@ h2 {
     margin-top: -13px;
     margin-bottom: 0;
     position: absolute;
-    right: -3px;
-    top: 10px;
+    right: -1px;
+    top: 12px;
     color: #fff;
 }
 .chicken {
@@ -61,7 +62,7 @@ h2 {
 
 .section {
     background-color: #ebebeb;
-    border: 3px solid black;
+    border: 1px solid black;
     position: relative;
     height: 200px;
     margin-right: 15px;
