--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -64,7 +64,7 @@ h2 {
     background-color: #ebebeb;
     border: 1px solid black;
     position: relative;
-    height: 200px;
+    min-height: 200px;
     margin-right: 15px;
     margin-left: auto;
     margin-bottom: 15px;
