--- a/module-3-solution/css/style.css
+++ b/module-3-solution/css/style.css
@@ -1,3 +1,5 @@
+/*stylesheets*/
+
 * {
 	box-sizing: border-box;
 }
@@ -6,22 +8,17 @@ body {
 	font-family: sans-serif;
 }
 
-.navbar-nav li {
-	text-align: center;
-}
-
 h1 {
-	margin-top: 0;
+	margin-top: 70px;
 	margin-bottom: 20px;
 }
 
-.container h1, h2 {
-	text-align: center;
-}
 
 div.section{
 	background-color: #d1d1d1;
 	padding: 1px 10px;
 	margin-bottom: 30px;
-	
+}
+#top {
+	position: absolute;
 }
